# glimpse

./: .gitignore  .releaserc.json  ARCHITECTURE_V2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTORING_PLAN.md  TODO.md  glimpse.spec  main.py  profile.out  pyproject.toml  test_feh_integration.py  test_imports.py
.github/workflows/: release.yml  test.yml
docs/agents/: domain.md
src/: version.py
src/core/: collections.py  image_utils.py
src/ui/: collection_dialog.py  loading_dialog.py  main_window.py  startup_dialog.py  styles.py  timer_dialog.py  widgets.py
src/ui/components/: __init__.py  centered_dialog.py  sorting_panel.py
src/ui/managers/: __init__.py  history_manager.py  image_display_manager.py  media_controls_manager.py  menu_manager.py
tests/: test_performance.py
